# agenticAIeducation

./: .gitignore  README.md  pyproject.toml  recreate_venv_steps.md  required-aws-policy.json
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/community_contributions/: 1_lab1_gemini.ipynb  my_1_lab1.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/community_contributions/: 2_lab2_with_graph_visualization.ipynb
3_crew/coder2/: README.md  pyproject.toml
3_crew/coder2/output/: code_and_output.py
3_crew/coder2/src/coder2/: crew.py  main.py
3_crew/coder2/src/coder2/config/: agents.yaml
3_crew/coder3/: README.md  pyproject.toml
3_crew/coder3/src/coder3/: crew.py  main.py
3_crew/debate2/: README.md  pyproject.toml
3_crew/debate3/: README.md  pyproject.toml
3_crew/debate3/output/: decide.md  oppose.md  propose.md
3_crew/debate3/src/debate3/: crew.py  main.py
3_crew/debate3/src/debate3/config/: agents.yaml  tasks.yaml
3_crew/stock_picker2/: README.md  pyproject.toml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py  statechecckpointexample.json
5_autogen/: 2_lab2_autogen_agentchat.ipynb
5_strand/01-first-agent/: 01-first-agent.ipynb
5_strand/02-openai-model/: openai-litellm-agent.ipynb
6_mcp/: 5_lab5.ipynb
7_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb
guides/: 10_intermediate_python.ipynb
mechanicsbiocreator/: mechanic_bio_creator.ipynb  mechanic_bio_creator_real.ipynb
setup/: SETUP-PC.md  SETUP-WSL.md  SETUP-linux.md  SETUP-mac.md  troubleshooting.ipynb
(+46 files in other folders)
