[project]
name = "debate3"
version = "0.1.0"
description = "debate3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
debate3 = "debate3.main:run"
run_crew = "debate3.main:run"
train = "debate3.main:train"
replay = "debate3.main:replay"
test = "debate3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
